# ynab-mcp-server

./: DEVELOPMENT.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
src/ynab_mcp_server/: body_wrappers.py  server.py
tests/: smoke_test.py  test_body_wrappers.py  test_server.py
