[project]
name = "ynab-mcp-tools"
version = "0.1.0"
description = "An MCP server for the YNAB (You Need A Budget) API"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Rafael Garcia" },
]
keywords = ["mcp", "model-context-protocol", "ynab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[project.urls]
Homepage = "https://github.com/rgarcia/ynab-mcp-server"
Repository = "https://github.com/rgarcia/ynab-mcp-server"
Issues = "https://github.com/rgarcia/ynab-mcp-server/issues"

[project.scripts]
ynab-mcp-tools = "ynab_mcp_server.server:main"
ynab-mcp-server = "ynab_mcp_server.server:main"

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ynab_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/LICENSE",
    "/README.md",
]
